# Cartograf-a-de-lo-infinito-

./: .gitignore  README.md  get_logs.js  index.html  manifest.json  matematicas_del_universo.md  patch_chunk.js  patch_visuals.js  sw.js  test_load.js  test_planet.js
css/: universe.css
js/: addiction.js  app.js  audio.js  beacons.js  chunk_manager.js  collection.js  controls.js  crafting.js  effects.js  encounters.js  flora.js  fps_controller.js  gameplay.js  mining.js  planet_surface.js  planets.js  ruins.js  scene.js  ship.js  store.js  terrain.js  terrain_worker.js  ui.js
procedural_engine/: Cargo.toml
procedural_engine/src/: generator.rs  lib.rs  lsystem.rs  sector.rs
server/: index.js  package-lock.json  package.json  salt-wall.js
server/db/: schema.sql  universe.db-shm  universe.db-wal
server/middleware/: auth.js
server/routes/: auth.js  economy.js  sectors.js
