[package]
name = "procedural_engine"
version = "0.1.0"
edition = "2021"
description = "Deterministic procedural universe generator — Cartografía de lo Infinito"
authors = ["Miguel Guerra"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
noise = "0.9"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
